# SGR-Tools

./: .gitignore  .zenodo.json  LICENSE  README.md  pyproject.toml
examples/: ARX.ipynb  MARX.ipynb  block_bootstrap.ipynb  periodic_forecast.ipynb  scenario_tree.ipynb
licences/: SCIKIT-LEARN-EXTRA_licence.txt
sgr_tools/ScenarioGeneration/: BlockBootstrap.py  __init__.py
sgr_tools/ScenarioGeneration/Parametric/: __init__.py
sgr_tools/ScenarioGeneration/Parametric/Forecast/: __init__.py
sgr_tools/ScenarioGeneration/Parametric/Forecast/Models/: ARX.py  ForecastModel.py  MARX.py  __init__.py
sgr_tools/ScenarioGeneration/Parametric/Forecast/Tools/: PeriodicForecast.py  Splines.py  __init__.py
sgr_tools/ScenarioGeneration/Parametric/Structures/: ScenarioSet.py  __init__.py
sgr_tools/ScenarioReduction/: NonAnticipativitySets.py  ScenarioTree.py  __init__.py
tests/: __init__.py  test_block_bootstrap.py  test_scenario_tree.py
